a couple issues but almost there

--- a/mockup.css
+++ b/mockup.css
@@ -26,7 +26,7 @@ display: flex;
 
 .header-links {
     display: inline-block;
-    margin-left: 60%;
+    margin-left: 50%;
     margin-top: 15px;
 }
 
@@ -45,14 +45,17 @@ display: flex;
     background-color: rgb(224, 224, 224);
     margin-top: 20px;
     display: inline-block;
+    /* display: flex;
+    flex-flow: row nowrap; */
     padding-left: 60px;
     padding-block: 40px;
-    width: 100%;
 }
 
 .lorem {
-    display: inline-block;
-    margin-top: 20px;
+    display: block;
+    margin-top: 17px;
+    width: 20%;
+    font-family: "Roboto", sans-serif;
 }
 
 .bh {
@@ -62,15 +65,15 @@ display: flex;
 }
 .b-container {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
 }
 /* .img1 {
     margin-left: 50px;
 } */
  .img-container {
     background-image: url('images/mockUpImg3.jpg');
-    height: 250px;
-    width: 160px;
+    height: 330px;
+    width: 260px;
     background-size: cover;
     margin-left: 30px;
     display: flex;
@@ -98,8 +101,8 @@ display: flex;
 
 .img-container2 {
     background-image: url('images/mockUpImg1.jpg');
-    height: 250px;
-    width: 160px;
+    height: 330px;
+    width: 260px;
     background-size: cover;
     margin-left: 30px;
     display: flex;
@@ -110,8 +113,8 @@ display: flex;
 
 .img-container3 {
     background-image: url('images/mockUpImg2.jpg');
-    height: 250px;
-    width: 160px;
+    height: 330px;
+    width: 260px;
     background-size: cover;
     margin-left: 30px;
     display: flex;
