--- a/mockup.css
+++ b/mockup.css
@@ -44,6 +44,7 @@ display: flex;
 .be-healthy {
     background-color: rgb(224, 224, 224);
     margin-top: 20px;
+    width: 100%
     display: inline-block;
     /* display: flex;
     flex-flow: row nowrap; */
@@ -54,7 +55,8 @@ display: flex;
 .lorem {
     display: block;
     margin-top: 17px;
-    width: 20%;
+    margin-bottom: 20px;
+    width: 240px;
     font-family: "Roboto", sans-serif;
 }
 
@@ -67,15 +69,20 @@ display: flex;
     display: flex;
     flex-flow: row nowrap;
 }
+
+.item1 {
+    width: 350px;
+    height: 150px;
+}
 /* .img1 {
     margin-left: 50px;
 } */
  .img-container {
     background-image: url('images/mockUpImg3.jpg');
-    height: 330px;
-    width: 260px;
+    height: 390px;
+    width: 290px;
     background-size: cover;
-    margin-left: 30px;
+    margin-left: 50px;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -101,10 +108,10 @@ display: flex;
 
 .img-container2 {
     background-image: url('images/mockUpImg1.jpg');
-    height: 330px;
-    width: 260px;
+    height: 390px;
+    width: 290px;
     background-size: cover;
-    margin-left: 30px;
+    margin-left: 10px;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -113,10 +120,10 @@ display: flex;
 
 .img-container3 {
     background-image: url('images/mockUpImg2.jpg');
-    height: 330px;
-    width: 260px;
+    height: 390px;
+    width: 290px;
     background-size: cover;
-    margin-left: 30px;
+    margin-left: 10px;
     display: flex;
     flex-direction: column;
     align-items: end;
